--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -1,9 +1,5 @@
-@import '../libs/vars';
-@import '../libs/functions';
-@import '../libs/mixins';
-
 ///
-/// Eventually by HTML5 UP
+/// Dimension by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -11,41 +7,56 @@
 /* Form */
 
 	form {
-		margin: 0 0 _size(element-margin) 0;
+		$gutter: _size(element-margin) * 0.75;
 
-		.message {
-			@include icon;
-			@include vendor('transition', (
-				'opacity #{_duration(transition)} ease-in-out',
-				'transform #{_duration(transition)} ease-in-out'
-			));
-			@include vendor('transform', 'scale(1.05)');
-			height: _size(element-height);
-			line-height: _size(element-height);
-			opacity: 0;
+		margin: 0 0 (_size(element-margin) * 1.25) 0;
 
-			&:before {
-				margin-right: 0.5em;
+		.field {
+			margin: 0 0 ($gutter * 1) 0;
+
+			&.half {
+				width: 50%;
+				float: left;
+				padding: 0 0 0 ($gutter * 1 * 0.5);
+
+				&.first {
+					padding: 0 ($gutter * 1 * 0.5) 0 0;
+				}
 			}
+		}
 
-			&.visible {
-				@include vendor('transform', 'scale(1)');
-				opacity: 1;
-			}
+		> .actions {
+			margin: ($gutter * 1.25) 0 0 0 !important;
+		}
 
-			&.success {
-				color: _palette(positive, bg);
+		@include breakpoint(small) {
+			.field {
+				margin: 0 0 ($gutter * 0.75) 0;
 
-				&:before {
-					content: '\f00c';
+				&.half {
+					padding: 0 0 0 ($gutter * 0.75 * 0.5);
+
+					&.first {
+						padding: 0 ($gutter * 0.75 * 0.5) 0 0;
+					}
 				}
 			}
 
-			&.failure {
-				color: _palette(negative, bg);
+			> .actions {
+				margin: ($gutter * 1) 0 0 0 !important;
+			}
+		}
 
-				&:before {
-					content: '\f119';
+		@include breakpoint(xsmall) {
+			.field {
+				&.half {
+					width: 100%;
+					float: none;
+					padding: 0;
+
+					&.first {
+						padding: 0;
+					}
 				}
 			}
 		}
@@ -54,36 +65,33 @@
 	label {
 		color: _palette(fg-bold);
 		display: block;
-		font-size: 0.9em;
-		font-weight: _font(weight-bold);
+		font-size: 0.8rem;
+		font-weight: _font(weight);
+		letter-spacing: _font(letter-spacing);
+		line-height: 1.5;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
-	}
-
-	@include keyframes(focus) {
-		0% { @include vendor('transform', 'scale(1)'); }
-		50% { @include vendor('transform', 'scale(1.025)'); }
-		100% { @include vendor('transform', 'scale(1)'); }
+		text-transform: uppercase;
 	}
 
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
+	input[type="tel"],
 	select,
 	textarea {
 		@include vendor('appearance', 'none');
-		@include vendor('transform', 'scale(1)');
 		@include vendor('transition', (
-			'border-color #{_duration(transition)} ease',
-			'background-color #{_duration(transition)} ease'
+			'border-color #{_duration(transition)} ease-in-out',
+			'box-shadow #{_duration(transition)} ease-in-out',
+			'background-color #{_duration(transition)} ease-in-out'
 		));
-		background-color: transparent;
+		background: transparent;
 		border-radius: _size(border-radius);
-		border: none;
 		border: solid _size(border-width) _palette(border);
 		color: inherit;
 		display: block;
 		outline: 0;
-		padding: 0 1em;
+		padding: 0 1rem;
 		text-decoration: none;
 		width: 100%;
 
@@ -92,9 +100,16 @@
 		}
 
 		&:focus {
-			@include vendor('animation', 'focus 0.1s');
-			background-color: _palette(border-bg);
-			border-color: _palette(accent, bg);
+			background: _palette(border-bg);
+			border-color: _palette(fg-bold);
+			box-shadow: 0 0 0 _size(border-width) _palette(fg-bold);
+		}
+	}
+
+	select {
+		option {
+			background: _palette(bg);
+			color: _palette(fg);
 		}
 	}
 
@@ -105,10 +120,11 @@
 
 		&:before {
 			color: _palette(border);
-			content: '\f078';
+			content: '\f107';
 			display: block;
 			height: _size(element-height);
-			line-height: _size(element-height);
+			//line-height: _size(element-height);
+			line-height: calc(#{_size(element-height)} + 0em);
 			pointer-events: none;
 			position: absolute;
 			right: 0;
@@ -130,7 +146,7 @@
 	}
 
 	textarea {
-		padding: 0.75em 1em;
+		padding: 0.75rem 1rem;
 	}
 
 	input[type="checkbox"],
@@ -138,51 +154,59 @@
 		@include vendor('appearance', 'none');
 		display: block;
 		float: left;
-		margin-right: -2em;
+		margin-right: -2rem;
 		opacity: 0;
-		width: 1em;
+		width: 1rem;
 		z-index: -1;
 
 		& + label {
 			@include icon;
+			@include vendor('user-select', 'none');
 			color: _palette(fg);
 			cursor: pointer;
 			display: inline-block;
-			font-size: 1em;
+			font-size: 0.8rem;
 			font-weight: _font(weight);
-			padding-left: (_size(element-height) * 0.6) + 0.75em;
-			padding-right: 0.75em;
+			margin: 0 0 (_size(element-margin) * 0.25) 0;
+			padding-left: (_size(element-height) * 0.6) + 1rem;
+			padding-right: 0.75rem;
 			position: relative;
 
 			&:before {
-				background: _palette(border-bg);
+				@include vendor('transition', (
+					'border-color #{_duration(transition)} ease-in-out',
+					'box-shadow #{_duration(transition)} ease-in-out',
+					'background-color #{_duration(transition)} ease-in-out'
+				));
 				border-radius: _size(border-radius);
 				border: solid _size(border-width) _palette(border);
 				content: '';
 				display: inline-block;
 				height: (_size(element-height) * 0.6);
 				left: 0;
-				line-height: (_size(element-height) * 0.575);
+				//line-height: (_size(element-height) * 0.575);
+				line-height: calc(#{_size(element-height) * 0.575} + 0em);
 				position: absolute;
 				text-align: center;
-				top: 0;
+				top: -0.125rem;
 				width: (_size(element-height) * 0.6);
 			}
 		}
 
 		&:checked + label {
 			&:before {
-				background: _palette(accent, bg);
-				border-color: _palette(accent, bg);
-				color: _palette(accent, fg-bold);
+				background: _palette(fg-bold) !important;
+				border-color: _palette(fg-bold) !important;
+				color: _palette(bg);
 				content: '\f00c';
 			}
 		}
 
 		&:focus + label {
 			&:before {
-				border-color: _palette(accent, bg);
-				box-shadow: 0 0 0 _size(border-width) _palette(accent, bg);
+				background: _palette(border-bg);
+				border-color: _palette(fg-bold);
+				box-shadow: 0 0 0 _size(border-width) _palette(fg-bold);
 			}
 		}
 	}
