--- a/assets/sass/ie9.scss
+++ b/assets/sass/ie9.scss
@@ -4,16 +4,45 @@
 @import 'libs/skel';
 
 /*
-	Eventually by HTML5 UP
+	Dimension by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Signup Form */
+/* BG */
 
-	#signup-form {
-		> * {
+	#bg {
+		&:before {
+			background: _palette(bg-overlay);
+		}
+	}
+
+/* Header */
+
+	#header {
+		.logo {
+			margin: 0 auto;
+		}
+
+		.content {
 			display: inline-block;
-			vertical-align: top;
+		}
+
+		nav {
+			ul {
+				display: inline-block;
+
+				 li {
+				 	display: inline-block;
+				 }
+			}
+		}
+	}
+
+/* Main */
+
+	#main {
+		article {
+			margin: 0 auto;
 		}
 	}
