--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,22 +3,21 @@
 @import 'libs/mixins';
 @import 'libs/skel';
 @import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600');
 
 /*
-	Eventually by HTML5 UP
+	Dimension by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 	@include skel-breakpoints((
-		xlarge: '(max-width: 1680px)',
-		large: '(max-width: 1280px)',
-		medium: '(max-width: 980px)',
-		small: '(max-width: 736px)',
-		xsmall: '(max-width: 480px)',
-		xxsmall: '(max-width: 360px)',
-		short: '(max-height: 640px)'
+		xlarge:		'(max-width: 1680px)',
+		large:		'(max-width: 1280px)',
+		medium:		'(max-width: 980px)',
+		small:		'(max-width: 736px)',
+		xsmall:		'(max-width: 480px)',
+		xxsmall:	'(max-width: 360px)'
 	));
 
 	@include skel-layout((
@@ -29,19 +28,22 @@
 // Base.
 
 	@import 'base/page';
-	@import 'base/bg';
 	@import 'base/typography';
 
-// Components.
+// Component.
 
-	@import 'components/section';
-	@import 'components/icon';
-	@import 'components/list';
 	@import 'components/form';
+	@import 'components/box';
+	@import 'components/icon';
+	@import 'components/image';
+	@import 'components/list';
+	@import 'components/table';
 	@import 'components/button';
 
 // Layout.
 
+	@import 'layout/bg';
+	@import 'layout/wrapper';
 	@import 'layout/header';
-	@import 'layout/signup-form';
+	@import 'layout/main';
 	@import 'layout/footer';
