--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1092,9 +1092,10 @@
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
 			background-image: url("../../images/pic01.jpg");
-			background-position: left;
+			background-position: center;
+			
 			background-size: cover;
-			background-repeat: repeat;
+			background-repeat: no-repeat;
 			z-index: 1;
 		}
 
