--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,13 +174,23 @@ p
     margin: 0 0 2rem 0;
 }
 
-h1, h2, h3, h4, h5, h6
+h1, h2, h4, h5, h6
 {
     color: #ffffff;
     font-weight: 600;
     line-height: 1.5;
     margin: 0 0 1rem 0;
     text-transform: uppercase;
+    letter-spacing: 0.2rem;
+}
+
+h3
+{
+    color: #ffffff;
+    font-weight: 600;
+    line-height: 1.5;
+    margin: 0 0 1rem 0;
+    text-transform: null;
     letter-spacing: 0.2rem;
 }
 
@@ -695,7 +705,6 @@ input[type="radio"] + label:before
     top: 0;
     width: 100%;
 }
-
 
 .image img
 {
