--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,10 +18,15 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     padding: 0;
     border: 0;
     font-size: 100%;
+    text-decoration: none
     font: inherit;
     vertical-align: baseline;
 }
 
+
+ #sabinalink a, u {
+text-decoration: none !important;
+}
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section
 {
     display: block;
