--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,10 +23,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     vertical-align: baseline;
 }
 
-
- #sabinalink a, u {
-text-decoration: none !important;
+#sabinalink a, u
+{
+    text-decoration: none !important;
 }
+
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section
 {
     display: block;
@@ -759,6 +760,7 @@ input[type="radio"] + label:before
     margin: 2.5rem 0;
     width: 100%;
 }
+
 
 .image.main img
 {
