--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
 
 @import url(font-awesome.min.css);
 
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
+@import url("https://fonts.googleapis.com/css?family=Philosopher");
 
 /*
 	Dimension by HTML5 UP
@@ -19,7 +19,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     border: 0;
     font-size: 100%;
     text-decoration: none
-    font: inherit;
+    font: initial;
     vertical-align: baseline;
 }
 
@@ -142,7 +142,7 @@ html
 body, input, select, textarea
 {
     color: #ffffff;
-    font-family: "Source Sans Pro", sans-serif;
+    font-family: "Philosopher";
     font-weight: 300;
     font-size: 1rem;
     line-height: 1.65;
