--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
 
 @import url(font-awesome.min.css);
 
-@import url("https://fonts.googleapis.com/css?family=Philosopher");
+@import url('https://fonts.googleapis.com/css?family=Kavivanar');
 
 /*
 	Dimension by HTML5 UP
@@ -14,6 +14,7 @@
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video
 {
+    font-family: "Kavivanar";
     margin: 0;
     padding: 0;
     border: 0;
@@ -41,6 +42,7 @@ body
 ol, ul
 {
     list-style: none;
+    border-bottom: solid px #ffffff;
 }
 
 blockquote, q
@@ -53,10 +55,36 @@ blockquote:before, blockquote:after, q:before, q:after {
 		content: none;
 	}
 
-table
-{
-    border-collapse: collapse;
-    border-spacing: 0;
+table {
+    b{
+		-moz-flex-grow: 1;
+		-webkit-flex-grow: 1;
+		-ms-flex-grow: 1;
+		flex-grow: 1;
+		-moz-flex-shrink: 1;
+		-webkit-flex-shrink: 1;
+		-ms-flex-shrink: 1;
+		flex-shrink: 1;
+		display: -moz-flex;
+		display: -webkit-flex;
+		display: -ms-flex;
+		display: flex;
+		-moz-align-items: center;
+		-webkit-align-items: center;
+		-ms-align-items: center;
+		align-items: center;
+		-moz-justify-content: center;
+		-webkit-justify-content: center;
+		-ms-justify-content: center;
+		justify-content: center;
+		-moz-flex-direction: column;
+		-webkit-flex-direction: column;
+		-ms-flex-direction: column;
+		flex-direction: column;
+		position: relative;
+		max-width: 100%;
+		z-index: 3;
+	}
 }
 
 body
@@ -142,7 +170,7 @@ html
 body, input, select, textarea
 {
     color: #ffffff;
-    font-family: "Philosopher";
+    font-family: "Kavivanar";
     font-weight: 300;
     font-size: 1rem;
     line-height: 1.65;
@@ -178,14 +206,17 @@ em, i
 p
 {
     margin: 0 0 2rem 0;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 h1, h2, h4, h5, h6
 {
+    font: Philosopher;
     color: #ffffff;
     font-weight: 600;
     line-height: 1.5;
-    margin: 0 0 1rem 0;
+    margin: 0 0 2rem 0;
     text-transform: uppercase;
     letter-spacing: 0.2rem;
 }
@@ -206,15 +237,12 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
     text-decoration: none;
 }
 
-h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
-			border-bottom: solid 1px #ffffff;
-			width: -moz-max-content;
-			width: -webkit-max-content;
-			width: -ms-max-content;
-			width: max-content;
-			padding-bottom: 0.5rem;
-			margin: 0 0 2rem 0;
-		}
+h1.major, h2.major, h3.major, h4.major, h5.major, h6.major
+{
+    border-bottom: solid px #ffffff;
+    padding-bottom: none;
+    margin: 0 0 rem 0;
+}
 
 h1
 {
@@ -687,7 +715,7 @@ input[type="radio"] + label:before
 
 .image
 {
-    border-radius: 4px;
+    border-radius: 1px;
     border: 0;
     display: inline-block;
     position: relative;
@@ -711,7 +739,6 @@ input[type="radio"] + label:before
     top: 0;
     width: 100%;
 }
-
 
 .image img
 {
@@ -800,6 +827,7 @@ ol li
 ul
 {
     list-style: disc;
+    border-bottom: solid px #ffffff;
     margin: 0 0 2rem 0;
     padding-left: 1em;
 }
@@ -829,6 +857,8 @@ ul.alt li:first-child
 
 ul.icons
 {
+    padding-bottom: 8px;
+    border-bottom: solid 1px #ffffff;
     cursor: default;
     list-style: none;
     padding-left: 0;
@@ -1008,10 +1038,36 @@ dl dd
     overflow-x: auto;
 }
 
-table
-{
-    margin: 0 0 2rem 0;
-    width: 100%;
+table {
+  {
+		-moz-flex-grow: 1;
+		-webkit-flex-grow: 1;
+		-ms-flex-grow: 1;
+		flex-grow: 1;
+		-moz-flex-shrink: 1;
+		-webkit-flex-shrink: 1;
+		-ms-flex-shrink: 1;
+		flex-shrink: 1;
+		display: -moz-flex;
+		display: -webkit-flex;
+		display: -ms-flex;
+		display: flex;
+		-moz-align-items: center;
+		-webkit-align-items: center;
+		-ms-align-items: center;
+		align-items: center;
+		-moz-justify-content: center;
+		-webkit-justify-content: center;
+		-ms-justify-content: center;
+		justify-content: center;
+		-moz-flex-direction: column;
+		-webkit-flex-direction: column;
+		-ms-flex-direction: column;
+		flex-direction: column;
+		position: relative;
+		max-width: 100%;
+		z-index: 3;
+	}
 }
 
 table tbody tr
@@ -1197,17 +1253,18 @@ input[type="submit"],
 
 #bg
 {
-    -moz-transform: scale(1.0);
-    -webkit-transform: scale(1.0);
-    -ms-transform: scale(1.0);
-    transform: scale(1.0);
-    -webkit-backface-visibility: hidden;
+    -moz-transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+    -webkit-backface-visibility: null;
     position: fixed;
     top: 0;
     left: 0;
+    right: 0px;
     width: 100%;
     height: 100vh;
-    z-index: 1;
+    z-index: 0;
 }
 
 #bg:before, #bg:after
@@ -1215,18 +1272,15 @@ input[type="submit"],
     content: '';
     display: block;
     position: absolute;
-    top: 0;
-    left: 0;
+    bottom: 0px;
+    right: 0px;
     width: 100%;
     height: 100%;
 }
 
+
 #bg:before
 {
-    -moz-transition: background-color 2.5s ease-in-out;
-    -webkit-transition: background-color 2.5s ease-in-out;
-    -ms-transition: background-color 2.5s ease-in-out;
-    transition: background-color 2.5s ease-in-out;
     -moz-transition-delay: 0.75s;
     -webkit-transition-delay: 0.75s;
     -ms-transition-delay: 0.75s;
@@ -1294,8 +1348,8 @@ h1
 }
 
 .wrap {
-  height: 100%;  
-  position: relative;
+  height: 110%;  
+  position: cover;
   overflow: hidden;
 
   img, .bg {
@@ -1315,7 +1369,7 @@ h1
     background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/167792/mountains_copy.jpg') no-repeat center center;
     background-size: cover;
 
-    transform: scale(1.1);
+    transform: scale(1.0);
   }
 }
 
@@ -1328,7 +1382,7 @@ body.is-article-visible #bg:after
     -moz-filter: blur(0.2rem);
     -webkit-filter: blur(0.2rem);
     -ms-filter: blur(0.2rem);
-    filter: blur(0.2rem);
+    filter: blur(0.rem);
 }
 
 body.is-loading #bg:before
@@ -1722,7 +1776,7 @@ body.is-loading #header .content .inner
     -ms-transition: opacity 0.325s ease-in-out, -ms-transform 0.325s ease-in-out;
     transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
     padding: 4.5rem 2.5rem 1.5rem 2.5rem;
-    position: relative;
+    position: center;
     width: 40rem;
     max-width: 100%;
     background-color: rgba(27, 31, 34, 0.85);
@@ -1868,6 +1922,10 @@ dfg
 }
 
 tablemus
+{
+}
+
+main
 {
 }
 
