--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1400,17 +1400,21 @@ body.is-article-visible #bg:after
 
 body.is-loading #bg:before
 {
-          -moz-transform: scale(1.0825);
-    -webkit-transform: scale(1.0825);
-    -ms-transform: scale(1.0825);
-    transform: scale(1.0825);
-    -moz-filter: blur(0.2rem);
-    -webkit-filter: blur(0.2rem);
-    -ms-filter: blur(0.2rem);
-    filter: blur(0.rem);
+background-color: #000000;
 }
 
 /* Wrapper */
+#bgwrapper {
+ width: 32px;
+    height: 32px;
+    text-align: left;
+    background: rgb(255,255,255);
+
+    -webkit-transition: background 300ms ease-in 200ms; /* property duration timing-function delay */
+    -moz-transition: background 300ms ease-in 200ms;
+    -o-transition: background 300ms ease-in 200ms;
+    transition: background 300ms ease-in 200ms;
+}
 
 #wrapper {
 		display: -moz-flex;
